# torchlingo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  TESTING_GUIDE.md  inference_ceb_cmn.py  pyproject.toml  train_ceb_cmn.py
.github/: copilot-instructions.md  release.yml
.github/workflows/: docs.yml  tests_and_build.yml
checkpoints/torchlingo_eng_cmn_full20epochs/: test_results.txt
checkpoints/{args.experiment_name}/: test_results.txt
docs/: mkdocs.yml
docs/docs/: MULTILINGUAL_ANALYSIS.md  MULTILINGUAL_QUICKSTART.md  contributing.md  index.md
docs/docs/assets/javascripts/: mermaid-init.js
docs/docs/concepts/: data-pipeline.md  models.md  training.md  vocabulary.md  what-is-nmt.md
docs/docs/getting-started/: first-translation.md  installation.md  quickstart.md
docs/docs/reference/: checkpoint.md  config.md  index.md
docs/docs/reference/data_processing/: batching.md  dataset.md  index.md  vocab.md
docs/docs/reference/models/: index.md  lstm.md  positional.md  transformer.md
docs/docs/reference/preprocessing/: base.md  index.md  multilingual.md  sentencepiece.md
docs/docs/stylesheets/: extra.css
docs/docs/tutorials/: 01-data-and-vocab.ipynb  02-train-tiny-model.ipynb  03-inference-and-beamsearch.ipynb  index.md
examples/: TRAINING_GUIDE_CEB_CMN.md  evaluate.py  evaluate.sh  multilingual_train.sh  multilingual_training_example.py  train.py  train_ceb_cmn_simple.py
scripts/: build_wheel.sh  generate_sentencepiece_models.py  serve_docs.sh
src/torchlingo/: __init__.py  checkpoint.py  config.py  evaluation.py  training.py
src/torchlingo/models/: lstm_simple.py  positional.py  transformer_simple.py
src/torchlingo/preprocessing/: multilingual_helpers.py  sentencepiece.py
tests/: test_checkpoint.py  test_config.py  test_integration_robust.py  test_model_convergence.py  test_models.py  test_multilingual_helpers.py
