[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchlingo"
version = "0.0.8"
description = "Educational PyTorch NMT library for coursework and instruction."
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [ { name = "TorchLingo Maintainers" } ]
keywords = [
    "nmt",
    "neural-machine-translation",
    "translation",
    "pytorch",
    "transformer",
    "educational",
    "deep-learning",
    "nlp",
    "natural-language-processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "torch>=2.0",
    "pandas>=1.5",
    "pyarrow>=13.0",
    "sentencepiece>=0.1.99",
    "tensorboard>=2.12",
    "sacrebleu>=2.3",
]

[project.urls]
Homepage = "https://byu-matrix-lab.github.io/torchlingo/"
Documentation = "https://byu-matrix-lab.github.io/torchlingo/"
Repository = "https://github.com/byu-matrix-lab/torchlingo"
Issues = "https://github.com/byu-matrix-lab/torchlingo/issues"
Changelog = "https://github.com/byu-matrix-lab/torchlingo/releases"

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
    "griffe>=0.40",
]
dev = ["pytest>=7.0", "ruff>=0.12", "isort>=5.12", "build>=1.0", "twine>=4.0", "pre-commit>=3.0"]
japanese = ["fugashi>=1.3", "unidic-lite>=1.0"]
chinese = ["jieba>=0.42"]
asian = [
    "fugashi>=1.3",
    "unidic-lite>=1.0",
    "jieba>=0.42",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"torchlingo" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
# Ignore E402 (imports not at top) in documentation notebooks since they often
# manipulate sys.path and import packages mid-cell for interactivity.
[tool.ruff.lint]
per-file-ignores = { "docs/**/*.ipynb" = ["E402", "F401"] }

